@@ -6,13 +6,18 @@
  x.y.z
 ----------------------------------------------------------------------
 
- - 3 python patches (not yet in).
+ - Updated translations (sl).
+ - 3 python patches.
  - python amd64 suse configure.in patch (Mads Martin Joergensen).
  - ricky's history patch (Ricky Clarkson).
  - fixed missing dcc flag on new ignores via gui.
  - print plugin name on "xxx called without a valid context" messages.
  - add needed 5 spaces to ignore footer text event.
  - FALSE on gdk_colormap_alloc_color sharable arg in xtext.c.
+ - Fixed some 64-bit issues (xc205-fix64bit.diff).
+ - 311 word[8] might not have a ":" [822199].
+ - Apply tint changes instantly.
+ - 
 
 
 ----------------------------------------------------------------------
